# 2018_labo_beeldinterpretatie_Kennes_Dries

./: .gitmodules  README.md
sessie_0/: README.md  main.cpp
sessie_1/: main.cpp
sessie_2/: README.md  main.cpp
sessie_3/: CMakeLists.txt  README.md  main.cpp
sessie_4/: main.cpp
sessie_5/: README.md  main.cpp  strawberry1.tif.txt  strawberry2.tif.txt
sessie_6/: CMakeLists.txt  faces.cpp  main.cpp  people.cpp
sessie_template/: main.cpp
